src/objects/BAR_Org_Retail_Sales__c.object
<CustomObject>
    <fields>
        <fullName>AUM_AUD__c</fullName>
        <label>AUM - AUD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_CAD__c</fullName>
        <label>AUM - CAD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_EUR__c</fullName>
        <label>AUM - EUR</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_GBP__c</fullName>
        <label>AUM_GBP</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_JPY__c</fullName>
        <label>AUM_JPY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_SGD__c</fullName>
        <label>AUM SGD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_USD__c</fullName>
        <label>AUM_USD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_at_Risk__c</fullName>
        <label>Business at Risk</label>
        <referenceTo>Business_at_Risk__c</referenceTo>
        <relationshipLabel>BAR Org Retail Sales</relationshipLabel>
        <relationshipName>BAR_Org_Retail_Sales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Reporting_Currency_Code__c</fullName>
        <label>Client Reporting Currency Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_ID__c</fullName>
        <label>MDM_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_At_Risk__c</fullName>
        <label>Percentage At Risk</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Vehicle__c</fullName>
        <label>Product Vehicle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>BAR Org Retail Sales</relationshipLabel>
        <relationshipName>BAR_Org_Retail_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Share Class</label>
        <referenceTo>Share_Classes__c</referenceTo>
        <relationshipLabel>BAR Org Retail Sales</relationshipLabel>
        <relationshipName>BAR_Org_Retail_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BAR Org Retail Sales</label>
    <nameField>
        <displayFormat>BORS-{00000000}</displayFormat>
        <label>BAR Org Retail Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BAR Org Retail Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>